<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/testBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/app_name"/>
            <Button
                android:id="@+id/testAnim"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/base_anim"/>
            <Button
                android:id="@+id/testTra"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/tra_anim"/>
            <Button
                android:id="@+id/customView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/cus_view"/>
            <Button
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/surfaceview"/>
            <Button
                android:id="@+id/toucheEventView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/touch_view"/>
            <Button
                android:id="@+id/storageView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/storage_view"/>
            <Button
                android:id="@+id/sqliteView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/sqlite"/>
            <Button
                android:id="@+id/expandableListView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/expandablelistview"/>
            <Button
                android:id="@+id/broadcastView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/broadcastreceiver"/>
            <Button
                android:id="@+id/newworkView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/newwork"/>
            <Button
                android:id="@+id/handlerView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/handler"/>
            <Button
                android:id="@+id/handlerDownloadView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/handlerdownload"/>
            <Button
                android:id="@+id/handlerDiglettView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/handler_diglett"/>
            <Button
                android:id="@+id/asyncTaskView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/asynctask"/>
            <Button
                android:id="@+id/serviceView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/service"/>
            <Button
                android:id="@+id/aidlView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/aidl_app"/>
            <Button
                android:id="@+id/contentProviderView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/contentprovider_app"/>
            <Button
                android:id="@+id/socketHttpView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/socketandhttp_demo"/>
            <Button
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/cardview"/>
            <Button
                android:id="@+id/screenView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/screen"/>
            <Button
                android:id="@+id/okhttpView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/okhttp"/>
            <Button
                android:id="@+id/eventbusView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/eventbus"/>
            <Button
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/recycleview"/>
            <Button
                android:id="@+id/glideView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/glide"/>
            <Button
                android:id="@+id/greenDaoView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/greendao"/>
            <Button
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/webview"/>
            <Button
                android:id="@+id/butterknifeView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:text="@string/butterknife"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>