<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jsyiyi.javacode.animation.AnimationActivity"
    android:orientation="vertical">
    <Button
        android:id="@+id/testPro"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/test_pro"/>
    <Button
        android:id="@+id/testView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/view_anim"/>
    <Button
        android:id="@+id/testFrame"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/anim_frame"/>

</LinearLayout>