<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jsyiyi.javacode.animation.transitionanimation.TraActivity"
    android:orientation="vertical">
    <Button
        android:id="@+id/testReveal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/test_reveal"/>
    <Button
        android:id="@+id/btnScene"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/test_scene"/>
    <Button
        android:id="@+id/btnActivity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/test_activity"/>
</LinearLayout>